rust/src/nasl/syntax/tokenizer/snapshots/scannerlib__nasl__syntax__tokenizer__tests__unclosed_data_string.snap
---
source: src/nasl/syntax/tokenizer/tests.rs
expression: "tokenize_err(stringify! (unclosed_data_string), \"'Hello \\\\'you\\\\'!\\\\'\")"
snapshot_kind: text
---
error: Unclosed data string literal.
  ┌─ unclosed_data_string:1:1
  │
1 │ 'Hello \'you\'!\'
  │ ^^^^^^^^^^^^^^^^^ Unclosed data string literal.
